simle work with dom

--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Js-snippets</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-		<button id="myIP">Show my IP</button>
+		<p id="textColor">Click me</p>
+
+		<h3>Object</h3>
+		<ul>
+			<li>Свойства (характеристики, текущее состояние обькта)</li>
+			<li>Методы (действие которое может совершить объект)</li>
+			<li>События (клик, наведение, таймер, загрузка)</li>
+		</ul>
+
+		<h3>Carousel</h3>
+		<div id="foto">
+			<img src="img/avto/avto (1).jpg" alt="alt">
+			<img src="img/avto/avto (2).jpg" alt="alt">
+			<img src="img/avto/avto (3).jpg" alt="alt">
+			<img src="img/avto/avto (4).jpg" alt="alt">
+			<img src="img/avto/avto (5).jpg" alt="alt">
+		</div>
+		<div id="controlsBTN">
+			<button class="prev">Prev</button>
+			<button class="next">Next</button>
+		</div>
 
 	<script src="js/common.js"></script>
 </body>
