slider with add class

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<h3>Carousel</h3>
 		<div id="foto">
-			<img src="img/avto/avto (1).jpg" alt="alt">
+			<img src="img/avto/avto (1).jpg" alt="alt" class="showed">
 			<img src="img/avto/avto (2).jpg" alt="alt">
 			<img src="img/avto/avto (3).jpg" alt="alt">
 			<img src="img/avto/avto (4).jpg" alt="alt">
