--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Js-snippets</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-	<button>JS snippets</button>
+	<div>JS snippets</div>
 
 	<script src="js/common.js"></script>
 </body>
