--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 
 <body>
 
-	<div>JS snippetss</div>
+	<div>JS lesson - 1</div>
+
+	<div class="btns">
+		<button>Save</button>
+		<button>Del</button>
+	</div>
+
+
 
 	<script src="js/common.js"></script>
 </body>
