--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<div>JS lesson - 1</div>
 
 	<div class="btns">
-		<button>Save</button>
-		<button>Del</button>
+		<button id="save">Save</button>
+		<button id="del">Del</button>
 	</div>
 
 
