--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 	<script src="js/common.js"></script>
 	<script src="js/arr.js"></script>
+	<script src="js/event.js"></script>
 </body>
 
 </html>
