--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
 
 	<div>JS lesson - 1</div>
 
-	<div class="btns">
-		<button id="save">Save</button>
-		<button id="del">Del</button>
+	<div id="products">
+		<div class="product" data-price='100'>Item 100</div>
+		<div class="product" data-price='200'>Item 200</div>
+		<div class="product" data-price='300'>Item 300</div>
+		<div class="product" data-price='400'>Item 400</div>
 	</div>
+
+	<div class="sum">SUM: <strong>0</strong></div>
 
 
 
 	<script src="js/common.js"></script>
 	<script src="js/arr.js"></script>
 	<script src="js/event.js"></script>
+	<script src="js/shop.js"></script>
 </body>
 
 </html>
