calc plus & minus ready

--- a/index.html
+++ b/index.html
@@ -19,15 +19,45 @@
 		<div class="product" data-price='300'>Item 300</div>
 		<div class="product" data-price='400'>Item 400</div>
 	</div>
-
 	<div class="sum">SUM: <strong>0</strong></div>
 
+	<h3>Calc</h3>
+
+	<div id="calc">
+		<span id="num1"></span>
+		<span id="num2"></span>
+		<span id="operator"></span>
+		<span id="res"></span>
+		<div class="display"></div>
+
+
+		<div class="keyNumber">
+			<div class="btn-1">1</div>
+			<div class="btn-2">2</div>
+			<div class="btn-3">3</div>
+			<div class="btn-4">4</div>
+			<div class="btn-5">5</div>
+			<div class="btn-5">6</div>
+			<div class="btn-7">7</div>
+			<div class="btn-8">8</div>
+			<div class="btn-9">9</div>
+			<div class="btn-0">0</div>
+		</div>
+
+		<div class="keySingn">
+			<div class="btn-plus">+</div>
+			<div class="btn-minus">-</div>
+			<div class="btn-res">=</div>
+			<div class="btn-c">C</div>
+		</div>
+	</div>
 
 
 	<script src="js/common.js"></script>
 	<script src="js/arr.js"></script>
 	<script src="js/event.js"></script>
 	<script src="js/shop.js"></script>
+	<script src="js/calc.js"></script>
 </body>
 
 </html>
