--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 
 <body>
 
-	<div>JS snippets</div>
+	<div>JS замыкания, контекст, callback</div>
+
+	<div class="items">
+		<div class="item">item 1</div>
+		<div class="item">item 2</div>
+		<div class="item">item 3</div>
+		<div class="item">item 4</div>
+		<div class="item">item 5</div>
+		<div class="item">item 6</div>
+	</div>
 
 	<script src="js/common.js"></script>
 </body>
