blicking with setInterval ready

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<div>JS замыкания, контекст, callback</div>
 
+	<button class="start">Start</button>
 	<div class="items">
 		<div class="item">item 1</div>
 		<div class="item">item 2</div>
