--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
 
 	<button class="start">Start</button>
 	<div class="items">
-		<div class="item">item 1</div>
-		<div class="item">item 2</div>
-		<div class="item">item 3</div>
-		<div class="item">item 4</div>
-		<div class="item">item 5</div>
-		<div class="item">item 6</div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
+		<div class="item"></div>
 	</div>
 
 	<script src="js/common.js"></script>
