--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 
 <body>
 
-	<div>JS snippets</div>
+	<div>NPM Gulp</div>
+
+	<ul>
+		<li>npm ls -g --depth=0</li>
+		<li>npm ls --depth=0</li>
+		<li>npm init (package.json)</li>
+		<li>npm up (подтянет и обновит все модули из package.json которые были сохранены с ключом --save dev)</li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul>
 
 	<script src="js/common.js"></script>
 </body>
