--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -11,7 +11,32 @@
 
 <body>
 
-	<div>OOP</div>
+	<h1>OOP Slider</h1>
+
+	<div class="carousel">
+
+		<button class="prev">Prev</button>
+		<button class="next">Next</button>
+
+		<div class="item">
+			<img src="img/avto/avto (1).jpg" alt="alt">
+		</div>
+		<div class="item">
+			<img src="img/avto/avto (2).jpg" alt="alt">
+		</div>
+		<div class="item">
+			<img src="img/avto/avto (3).jpg" alt="alt">
+		</div>
+		<div class="item">
+			<img src="img/avto/avto (4).jpg" alt="alt">
+		</div>
+		<div class="item">
+			<img src="img/avto/avto (5).jpg" alt="alt">
+		</div>
+
+
+
+	</div>
 
 
 	<script src="js/common.js"></script>
