--- a/index.html
+++ b/index.html
@@ -13,30 +13,56 @@
 
 	<h1>OOP Slider</h1>
 
-	<div class="carousel">
+	<section>
+		<div class="carousel carousel2">
 
-		<button class="prev">Prev</button>
-		<button class="next">Next</button>
+			<div class="carouselItems">
+				<div class="item item-active">
+					<img src="img/avto/avto (1).jpg" alt="alt">
+				</div>
+				<div class="item">
+					<img src="img/avto/avto (2).jpg" alt="alt">
+				</div>
+				<div class="item">
+					<img src="img/avto/avto (3).jpg" alt="alt">
+				</div>
+				<div class="item">
+					<img src="img/avto/avto (4).jpg" alt="alt">
+				</div>
+				<div class="item">
+					<img src="img/avto/avto (5).jpg" alt="alt">
+				</div>
+			</div>
 
-		<div class="item">
-			<img src="img/avto/avto (1).jpg" alt="alt">
 		</div>
-		<div class="item">
-			<img src="img/avto/avto (2).jpg" alt="alt">
-		</div>
-		<div class="item">
-			<img src="img/avto/avto (3).jpg" alt="alt">
-		</div>
-		<div class="item">
-			<img src="img/avto/avto (4).jpg" alt="alt">
-		</div>
-		<div class="item">
-			<img src="img/avto/avto (5).jpg" alt="alt">
-		</div>
+	</section>
 
+	<section>
+		<div class="carousel carousel1">
 
+			<div class="carouselItems">
+				<button class="prev">Prev</button>
+				<button class="next">Next</button>
 
-	</div>
+				<div class="item item-active">
+					<img src="img/avto/avto (1).jpg" alt="alt">
+				</div>
+				<div class="item">
+					<img src="img/avto/avto (2).jpg" alt="alt">
+				</div>
+				<div class="item">
+					<img src="img/avto/avto (3).jpg" alt="alt">
+				</div>
+				<div class="item">
+					<img src="img/avto/avto (4).jpg" alt="alt">
+				</div>
+				<div class="item">
+					<img src="img/avto/avto (5).jpg" alt="alt">
+				</div>
+			</div>
+
+		</div>
+	</section>
 
 
 	<script src="js/common.js"></script>
