two sliders work

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 <body>
 
 	<h1>OOP Slider</h1>
-
 	<section>
-		<div class="carousel carousel2">
+		<div class="carousel carousel1">
 
 			<div class="carouselItems">
+				<div class="btns">
+					<button class="prev">Prev</button>
+					<button class="next">Next</button>
+				</div>
+
 				<div class="item item-active">
 					<img src="img/avto/avto (1).jpg" alt="alt">
 				</div>
@@ -37,13 +41,17 @@
 		</div>
 	</section>
 
-	<section>
-		<div class="carousel carousel1">
+	<hr>
 
-			<div class="carouselItems">
+	<section>
+		<div class="carousel carousel2">
+
+			<div class="btns">
 				<button class="prev">Prev</button>
 				<button class="next">Next</button>
+			</div>
 
+			<div class="carouselItems">
 				<div class="item item-active">
 					<img src="img/avto/avto (1).jpg" alt="alt">
 				</div>
