--- a/index.html
+++ b/index.html
@@ -11,66 +11,8 @@
 
 <body>
 
-	<h1>OOP Slider</h1>
-	<section>
-		<div class="carousel carousel1">
+	<h1>JS to jQuery</h1>
 
-			<div class="carouselItems">
-				<div class="btns">
-					<button class="prev">Prev</button>
-					<button class="next">Next</button>
-				</div>
-
-				<div class="item item-active">
-					<img src="img/avto/avto (1).jpg" alt="alt">
-				</div>
-				<div class="item">
-					<img src="img/avto/avto (2).jpg" alt="alt">
-				</div>
-				<div class="item">
-					<img src="img/avto/avto (3).jpg" alt="alt">
-				</div>
-				<div class="item">
-					<img src="img/avto/avto (4).jpg" alt="alt">
-				</div>
-				<div class="item">
-					<img src="img/avto/avto (5).jpg" alt="alt">
-				</div>
-			</div>
-
-		</div>
-	</section>
-
-	<hr>
-
-	<section>
-		<div class="carousel carousel2">
-
-			<div class="btns">
-				<button class="prev">Prev</button>
-				<button class="next">Next</button>
-			</div>
-
-			<div class="carouselItems">
-				<div class="item item-active">
-					<img src="img/avto/avto (1).jpg" alt="alt">
-				</div>
-				<div class="item">
-					<img src="img/avto/avto (2).jpg" alt="alt">
-				</div>
-				<div class="item">
-					<img src="img/avto/avto (3).jpg" alt="alt">
-				</div>
-				<div class="item">
-					<img src="img/avto/avto (4).jpg" alt="alt">
-				</div>
-				<div class="item">
-					<img src="img/avto/avto (5).jpg" alt="alt">
-				</div>
-			</div>
-
-		</div>
-	</section>
 
 
 	<script src="js/common.js"></script>
