--- a/index.html
+++ b/index.html
@@ -13,7 +13,33 @@
 
 	<h1>JS to jQuery</h1>
 
+	<a href="#" class="openPopup">Open popup</a>
+	<a href="#" class="openPopup2">Open popup2</a>
 
+	<div id='popup1' class="popup">
+		<div class="overlay"></div>
+
+		<div class="window1">
+			<span class="closePopup">X</span>
+			<h2>Popup - 1</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, veniam.</p>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, veniam.</p>
+		</div>
+
+	</div>
+
+	<div id='popup2' class="popup">
+		<div class="overlay"></div>
+		<div class="window1">
+			<span class="closePopup">X</span>
+			<h2>Popup - 2</h2>
+			<form>
+				<input type="text" placeholder="name">
+				<input type="text" placeholder="email">
+				<input type="submit" value="Submit">
+			</form>
+		</div>
+	</div>
 
 	<script src="js/common.js"></script>
 </body>
