--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 
 <body>
 
-	<div>JS snippets</div>
+	<div>ES6 Lavrik</div>
+
+	Оператор … (spread)
+	Итератор for…of
+	includes()
+	some()
+	every()
+	filter()
+	map()
+	reduce()
 
 	<script src="js/common.js"></script>
 </body>
